修改个人信息

--- a/HTML/简历/index.html
+++ b/HTML/简历/index.html
@@ -9,10 +9,10 @@
     <div class="face" id="no1"><!--封面-->
       <img src="./static/images/face.jpg">
       <div class="face-info">
-        <p><span>姓名：龚晓廖</span></p>
-        <p><span>电话：13048303441</span></p>
-        <p><span>邮箱：1402122292@qq.com</span></p>
-        <p><span>求职意向：计算机相关专业</span></p>
+        <p><span>姓名：龚</span></p>
+        <p><span>电话：130</span></p>
+        <p><span>邮箱：140</span></p>
+        <p><span>求职意向：计算机</span></p>
       </div>
      <hr>
     </div>
@@ -21,12 +21,12 @@
                 <p class="title"><b>自荐信</b></p><br><br>
                 <p class="title-1">尊敬的领导：</p>
                 <p class="title-2">你好！</p>
-                <p class="section-1">我是2016级信息安全与管理的一名学生，我从学院双选会网上得知这份招聘信息，并结合自身所学专业来应聘贵企业的相关职位，并对个人进行自我介绍。</p>
+                <p class="section-1">我是一名学生，我从学院双选会网上得知这份招聘信息，并结合自身所学专业来应聘贵企业的相关职位，并对个人进行自我介绍。</p>
                 <p class="section-2">经过大学的学习，我掌握了专业基础理论知识如：计算机基础、计算机网络、计算机专业英语、数据库原理及应用、SQL数据库管理与设计、局域网、服务器配置、路由交换技术、计算机病毒、信息安全综合实践。知道了一些常用的网络产品：交换机、路由器、防火墙和常用的网络协议：OSPF、iptables、vrrp；学习成绩一直名列前茅,获得国家励志奖学金就是我努力之后最好的证明。在学好专业知识的同时，还积极学习其它计算机技能，组建无盘工作站。在服务器方面我们学习了windows系列服务器和linux系列的服务器，会搭建各项局域网内基础服务DNS、HTTP、DHCP以及各种网络故障的排错，在学校带领大家做的毕业设计就是Linux企业服务器的搭建。在校期间找兼职协同机房管理员管理机房，累积专业实践经验并获得老师的一致好评。参加计算机网络技能大赛，通过一段时间的集训，熟悉cisco、H3C路由器、交换机的配置；在设备配置以及网络组建方面有一定的经验。在2018年全国大学生新华三杯比赛中荣获重庆市二等奖。2017年在扬州的川奇光电公司实习，荣任职管制一职，负责为大家分发物资，传达领导通知；通过这次实习大大提高了我的团队合作意识以及与领导沟通的能力。</p>
                 <p class="section-3">刚步入社会的我们更多的是却少人际交往的能力和专业实践能力。务实是我最好的能力。凭着我对本公司的了解和我的专业知识和老员工的带领下我一定能够胜任这份工作，我希望公司能够录用我。</p><br>
                 <p class="section-4">此致</p>
                 <p class="section-5">敬礼!</p>
-                <p class="section-6">龚晓廖</p>
+                <p class="section-6">龚</p>
                 <p class="section-7">2018年10月29日</p>
             </div>
     </div>
@@ -35,20 +35,20 @@
         <div class="body-left">
             <img class="myphoto" src="./static/images/myphoto.jpg" alt=""><br>
             <ul class="list1">
-                <li class="li0">龚晓廖</li>
+                <li class="li0">龚</li>
                 <li class="li1">求职意向：</li>
                 <li class="li1">计算机相关职位</li>
             </ul>
             <div class="base-info">基本信息</div>
             <ul class="list2">
                 <li>住址：重庆市北碚区</li>
-                <li>出生：1997年10月29日</li>
-                <li>籍贯：重庆市大足区</li>
+                <li>出生：1997年</li>
+                <li>籍贯：重庆市</li>
             </ul>
             <div class="base-info">联系方式</div>
             <ul  class="list2">
-                <li>电话：13048303441</li>
-                <li>邮箱：gonglovepj@gmail.com</li>
+                <li>电话：1304</li>
+                <li>邮箱：gong</li>
             </ul>
         </div>
         <div class="body-middle">
@@ -61,7 +61,7 @@
             <div class="education">
                 <span class="education-span">教育背景</span>
                 <div class="education-line"></div>
-                <span class="body-right-span1">2016.9—2019.6</span><span class="body-right-span2">重庆电讯职业学院</span><span class="body-right-span3">信息安全与管理</span>
+                <span class="body-right-span1">2016.9—2019.6</span><span class="body-right-span2">重庆</span><span class="body-right-span3">信息安全与管理</span>
             </div>
             <div class="art">
                 <span class="art-span">技能评价</span>
@@ -89,11 +89,11 @@
                 <span class="honer-span">荣誉奖励</span>
                 <div class="honer-line"></div>
                 <ul>
-                    <li><span class="honer-pspan1">2016.09</span><span class="honer-pspan2">重庆电讯职业学院“书法比赛”一等奖</span></li>
-                    <li><span class="honer-pspan1">2018.10</span><span class="honer-pspan2">全国大学生IT技术大赛“新华三杯”二等奖</span></li>
-                    <li><span class="honer-pspan1">2017.12</span><span class="honer-pspan2">创新创业大赛优等奖</span></li>
+                    <li><span class="honer-pspan1">2016.09</span><span class="honer-pspan2">一等奖</span></li>
+                    <li><span class="honer-pspan1">2018.10</span><span class="honer-pspan2">二等奖</span></li>
+                    <li><span class="honer-pspan1">2017.12</span><span class="honer-pspan2">优等奖</span></li>
                     <li><span class="honer-pspan1">2016.10</span><span class="honer-pspan2">三好学生</span></li>
-                    <li><span class="honer-pspan1">2017.05</span><span class="honer-pspan2">国家励志奖学金证书</span></li>
+                    <li><span class="honer-pspan1">2017.05</span><span class="honer-pspan2">奖学金证书</span></li>
                     <li><span class="honer-pspan1">2017.11</span><span class="honer-pspan2">优秀团员</span></li>
 
                 </ul>
